Remove Set.of() usage to be Java 8 compatible
Also, remove dot usages from prompts